--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -28,17 +28,35 @@ font-size: 22px;
 
 .service {
 margin-bottom: 18px;
+position: relative;
 }
 
 .service label {
 display: block;
 font-size: 14px;
 margin-bottom: 6px;
+cursor: help; /* show hint that tooltip exists */
 }
 
 .service label span {
 font-size: 12px;
 opacity: 0.6;
+}
+
+/* Tooltip */
+.service label:hover::after {
+content: attr(data-rate);
+position: absolute;
+left: 0;
+top: 100%;
+background: #000;
+color: #fff;
+padding: 4px 8px;
+font-size: 12px;
+border-radius: 4px;
+white-space: nowrap;
+margin-top: 4px;
+z-index: 10;
 }
 
 .service input {
@@ -47,12 +65,12 @@ padding: 8px;
 border: 2px solid #000;
 border-radius: 6px;
 text-align: right;
-color: #000; /* Ensure text stays black */
-background: #fff; /* Ensure background stays white */
+color: #000;
+background: #fff;
 }
 
 .service input:focus {
-outline: 2px solid #000; /* Highlight border on focus */
+outline: 2px solid #000;
 background: #fff;
 color: #000;
 }
@@ -94,15 +112,15 @@ padding: 10px 20px;
 font-size: 16px;
 border: 2px solid #000;
 border-radius: 6px;
-background: #fff; /* keep background white */
-color: #000; /* text black */
+background: #fff;
+color: #000;
 cursor: pointer;
 transition: border-color 0.2s, color 0.2s;
 }
 
 .clear-btn:hover {
-border-color: #555; /* slightly darker border on hover */
-color: #222; /* slightly darker text */
+border-color: #555;
+color: #222;
 }
 
 /* Mobile */
@@ -125,56 +143,55 @@ background: #ffe6e6;
 <h2>Pressure Washing Calculator</h2>
 
 <div class="service">
-<label>Driveway <span>£3 / m²</span></label>
+<label data-rate="Rate: £3 / m²">Driveway <span>£3 / m²</span></label>
 <div class="pair">
-<input type="number" id="drivewayLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="drivewayWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="drivewayLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="drivewaySubtotal">
+<input type="number" id="drivewayWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="drivewaySubtotal">
 </div>
 <div class="subtotal" id="drivewaySubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
-<label>Roof <span>£5 / m²</span></label>
-<input type="number" id="roof" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()">
+<label data-rate="Rate: £5 / m²">Roof <span>£5 / m²</span></label>
+<input type="number" id="roof" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="roofSubtotal">
 <div class="subtotal" id="roofSubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
-<label>Patio <span>£3.50 / m²</span></label>
+<label data-rate="Rate: £3.50 / m²">Patio <span>£3.50 / m²</span></label>
 <div class="pair">
-<input type="number" id="patioLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="patioWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="patioLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="patioSubtotal">
+<input type="number" id="patioWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="patioSubtotal">
 </div>
 <div class="subtotal" id="patioSubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
-<label>Walls <span>£4 / m²</span></label>
+<label data-rate="Rate: £4 / m²">Walls <span>£4 / m²</span></label>
 <div class="pair">
-<input type="number" id="wallsLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="wallsHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="wallsLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="wallsSubtotal">
+<input type="number" id="wallsHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="wallsSubtotal">
 </div>
 <div class="subtotal" id="wallsSubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
-<label>Conservatory Roof <span>£6 / m²</span></label>
-<input type="number" id="conservatory" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()">
+<label data-rate="Rate: £6 / m²">Conservatory Roof <span>£6 / m²</span></label>
+<input type="number" id="conservatory" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="conservatorySubtotal">
 <div class="subtotal" id="conservatorySubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
-<label>Fence <span>£2.50 / m²</span></label>
+<label data-rate="Rate: £2.50 / m²">Fence <span>£2.50 / m²</span></label>
 <div class="pair">
-<input type="number" id="fenceLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="fenceHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="fenceLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="fenceSubtotal">
+<input type="number" id="fenceHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()" aria-describedby="fenceSubtotal">
 </div>
 <div class="subtotal" id="fenceSubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="total" id="total">Enter measurements to see price</div>
 
-<!-- Clear All Button -->
 <button class="clear-btn" onclick="resetCalculator()">Clear All</button>
 </div>
 
@@ -195,8 +212,16 @@ let total = 0;
 
 services.forEach(service => {
 const values = service.inputs.map(id => Math.max(0, parseFloat(document.getElementById(id).value) || 0));
-const subtotal = values.reduce((a, b) => a * b, 1) * service.rate;
-document.getElementById(service.id + "Subtotal").innerText = `Subtotal: £${subtotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
+let subtotal = 0;
+
+if (values.length === 1) subtotal = values[0] * service.rate;
+else if (values.length === 2) subtotal = values[0] * values[1] * service.rate;
+
+subtotal = parseFloat(subtotal.toFixed(2));
+
+document.getElementById(service.id + "Subtotal").innerText =
+`Subtotal: £${subtotal.toLocaleString('en-GB', {minimumFractionDigits:2, maximumFractionDigits:2})}`;
+
 total += subtotal;
 });
 
@@ -212,10 +237,10 @@ const finalTotal = total < minimumFee ? minimumFee : total;
 
 if (total < minimumFee) {
 totalEl.classList.add('minimum');
-totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})} (minimum charge)`;
+totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2, maximumFractionDigits:2})} (minimum charge)`;
 } else {
 totalEl.classList.remove('minimum');
-totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
+totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2, maximumFractionDigits:2})}`;
 }
 }
 
