--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -1,1 +1,232 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pressure Washing Calculator</title>
 
+<style>
+body {
+background: #f5f5f5;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+.calculator {
+max-width: 420px;
+margin: 30px auto;
+padding: 25px;
+background: #fff;
+border: 2px solid #000;
+border-radius: 10px;
+}
+
+.calculator h2 {
+text-align: center;
+margin-bottom: 20px;
+font-size: 22px;
+}
+
+.service {
+margin-bottom: 18px;
+}
+
+.service label {
+display: block;
+font-size: 14px;
+margin-bottom: 6px;
+}
+
+.service label span {
+font-size: 12px;
+opacity: 0.6;
+}
+
+.service input {
+width: 100%;
+padding: 8px;
+border: 2px solid #000;
+border-radius: 6px;
+text-align: right;
+color: #000; /* Ensure text stays black */
+background: #fff; /* Ensure background stays white */
+}
+
+.service input:focus {
+outline: 2px solid #000; /* Highlight border on focus */
+background: #fff;
+color: #000;
+}
+
+.pair {
+display: flex;
+gap: 8px;
+}
+
+.pair input {
+flex: 1;
+}
+
+.subtotal {
+margin-top: 4px;
+font-size: 13px;
+opacity: 0.7;
+text-align: right;
+}
+
+.total {
+margin-top: 20px;
+padding: 14px;
+border: 2px solid #000;
+text-align: center;
+font-size: 18px;
+font-weight: bold;
+background: #fafafa;
+}
+
+.total.minimum {
+color: red;
+}
+
+/* Clear button */
+.clear-btn {
+margin-top: 15px;
+padding: 10px 20px;
+font-size: 16px;
+border: 2px solid #000;
+border-radius: 6px;
+background: #fff; /* keep background white */
+color: #000; /* text black */
+cursor: pointer;
+transition: border-color 0.2s, color 0.2s;
+}
+
+.clear-btn:hover {
+border-color: #555; /* slightly darker border on hover */
+color: #222; /* slightly darker text */
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+.pair {
+flex-direction: column;
+}
+}
+
+input:invalid {
+border-color: red;
+background: #ffe6e6;
+}
+</style>
+</head>
+
+<body>
+
+<div class="calculator">
+<h2>Pressure Washing Calculator</h2>
+
+<div class="service">
+<label>Driveway <span>£3 / m²</span></label>
+<div class="pair">
+<input type="number" id="drivewayLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="drivewayWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()">
+</div>
+<div class="subtotal" id="drivewaySubtotal">Subtotal: £0.00</div>
+</div>
+
+<div class="service">
+<label>Roof <span>£5 / m²</span></label>
+<input type="number" id="roof" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()">
+<div class="subtotal" id="roofSubtotal">Subtotal: £0.00</div>
+</div>
+
+<div class="service">
+<label>Patio <span>£3.50 / m²</span></label>
+<div class="pair">
+<input type="number" id="patioLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="patioWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()">
+</div>
+<div class="subtotal" id="patioSubtotal">Subtotal: £0.00</div>
+</div>
+
+<div class="service">
+<label>Walls <span>£4 / m²</span></label>
+<div class="pair">
+<input type="number" id="wallsLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="wallsHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()">
+</div>
+<div class="subtotal" id="wallsSubtotal">Subtotal: £0.00</div>
+</div>
+
+<div class="service">
+<label>Conservatory Roof <span>£6 / m²</span></label>
+<input type="number" id="conservatory" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()">
+<div class="subtotal" id="conservatorySubtotal">Subtotal: £0.00</div>
+</div>
+
+<div class="service">
+<label>Fence <span>£2.50 / m²</span></label>
+<div class="pair">
+<input type="number" id="fenceLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="fenceHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()">
+</div>
+<div class="subtotal" id="fenceSubtotal">Subtotal: £0.00</div>
+</div>
+
+<div class="total" id="total">Enter measurements to see price</div>
+
+<!-- Clear All Button -->
+<button class="clear-btn" onclick="resetCalculator()">Clear All</button>
+</div>
+
+<script>
+function calculateTotal() {
+const minimumFee = 45;
+
+const services = [
+{id: "driveway", rate: 3, inputs: ["drivewayLength", "drivewayWidth"]},
+{id: "roof", rate: 5, inputs: ["roof"]},
+{id: "patio", rate: 3.5, inputs: ["patioLength", "patioWidth"]},
+{id: "walls", rate: 4, inputs: ["wallsLength", "wallsHeight"]},
+{id: "conservatory", rate: 6, inputs: ["conservatory"]},
+{id: "fence", rate: 2.5, inputs: ["fenceLength", "fenceHeight"]},
+];
+
+let total = 0;
+
+services.forEach(service => {
+const values = service.inputs.map(id => Math.max(0, parseFloat(document.getElementById(id).value) || 0));
+const subtotal = values.reduce((a, b) => a * b, 1) * service.rate;
+document.getElementById(service.id + "Subtotal").innerText = `Subtotal: £${subtotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
+total += subtotal;
+});
+
+const totalEl = document.getElementById("total");
+
+if (total === 0) {
+totalEl.classList.remove('minimum');
+totalEl.innerText = "Enter measurements to see price";
+return;
+}
+
+const finalTotal = total < minimumFee ? minimumFee : total;
+
+if (total < minimumFee) {
+totalEl.classList.add('minimum');
+totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})} (minimum charge)`;
+} else {
+totalEl.classList.remove('minimum');
+totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
+}
+}
+
+function resetCalculator() {
+document.querySelectorAll('.calculator input').forEach(input => input.value = '');
+document.querySelectorAll('.subtotal').forEach(sub => sub.innerText = 'Subtotal: £0.00');
+const totalEl = document.getElementById("total");
+totalEl.classList.remove('minimum');
+totalEl.innerText = "Enter measurements to see price";
+}
+</script>
+
+</body>
+</html>
