--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -6,6 +6,16 @@
 <title>Pressure Washing Calculator</title>
 
 <style>
+/* Force all text to black */
+body, .calculator, .calculator * {
+color: #000 !important;
+}
+
+input::placeholder {
+color: #000;
+opacity: 1;
+}
+
 body {
 background: #f5f5f5;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
@@ -47,14 +57,12 @@ padding: 8px;
 border: 2px solid #000;
 border-radius: 6px;
 text-align: right;
-color: #000; /* Ensure text stays black */
-background: #fff; /* Ensure background stays white */
+background: #fff;
 }
 
 .service input:focus {
-outline: 2px solid #000; /* Highlight border on focus */
+outline: 2px solid #000;
 background: #fff;
-color: #000;
 }
 
 .pair {
@@ -81,31 +89,25 @@ text-align: center;
 font-size: 18px;
 font-weight: bold;
 background: #fafafa;
+color: #000 !important;
 }
 
-.total.minimum {
-color: red;
-}
-
-/* Clear button */
 .clear-btn {
 margin-top: 15px;
 padding: 10px 20px;
 font-size: 16px;
 border: 2px solid #000;
 border-radius: 6px;
-background: #fff; /* keep background white */
-color: #000; /* text black */
+background: #fff;
 cursor: pointer;
 transition: border-color 0.2s, color 0.2s;
 }
 
 .clear-btn:hover {
-border-color: #555; /* slightly darker border on hover */
-color: #222; /* slightly darker text */
+border-color: #555;
+color: #222;
 }
 
-/* Mobile */
 @media (max-width: 480px) {
 .pair {
 flex-direction: column;
@@ -127,23 +129,23 @@ background: #ffe6e6;
 <div class="service">
 <label>Driveway <span>£3 / m²</span></label>
 <div class="pair">
-<input type="number" id="drivewayLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="drivewayWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="drivewayLength" placeholder="Length (m)" min="0" step="0.5" oninput="calculateTotal()">
+<input type="number" id="drivewayWidth" placeholder="Width (m)" min="0" step="0.5" oninput="calculateTotal()">
 </div>
 <div class="subtotal" id="drivewaySubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
 <label>Roof <span>£5 / m²</span></label>
-<input type="number" id="roof" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="roof" placeholder="Total m²" min="0" step="0.5" oninput="calculateTotal()">
 <div class="subtotal" id="roofSubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
 <label>Patio <span>£3.50 / m²</span></label>
 <div class="pair">
-<input type="number" id="patioLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="patioWidth" placeholder="Width (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="patioLength" placeholder="Length (m)" min="0" step="0.5" oninput="calculateTotal()">
+<input type="number" id="patioWidth" placeholder="Width (m)" min="0" step="0.5" oninput="calculateTotal()">
 </div>
 <div class="subtotal" id="patioSubtotal">Subtotal: £0.00</div>
 </div>
@@ -151,30 +153,29 @@ background: #ffe6e6;
 <div class="service">
 <label>Walls <span>£4 / m²</span></label>
 <div class="pair">
-<input type="number" id="wallsLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="wallsHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="wallsLength" placeholder="Length (m)" min="0" step="0.5" oninput="calculateTotal()">
+<input type="number" id="wallsHeight" placeholder="Height (m)" min="0" step="0.5" oninput="calculateTotal()">
 </div>
 <div class="subtotal" id="wallsSubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
 <label>Conservatory Roof <span>£6 / m²</span></label>
-<input type="number" id="conservatory" placeholder="Total m²" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="conservatory" placeholder="Total m²" min="0" step="0.5" oninput="calculateTotal()">
 <div class="subtotal" id="conservatorySubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="service">
 <label>Fence <span>£2.50 / m²</span></label>
 <div class="pair">
-<input type="number" id="fenceLength" placeholder="Length (m)" min="0" step="0.01" oninput="calculateTotal()">
-<input type="number" id="fenceHeight" placeholder="Height (m)" min="0" step="0.01" oninput="calculateTotal()">
+<input type="number" id="fenceLength" placeholder="Length (m)" min="0" step="0.5" oninput="calculateTotal()">
+<input type="number" id="fenceHeight" placeholder="Height (m)" min="0" step="0.5" oninput="calculateTotal()">
 </div>
 <div class="subtotal" id="fenceSubtotal">Subtotal: £0.00</div>
 </div>
 
 <div class="total" id="total">Enter measurements to see price</div>
 
-<!-- Clear All Button -->
 <button class="clear-btn" onclick="resetCalculator()">Clear All</button>
 </div>
 
@@ -195,7 +196,8 @@ let total = 0;
 
 services.forEach(service => {
 const values = service.inputs.map(id => Math.max(0, parseFloat(document.getElementById(id).value) || 0));
-const subtotal = values.reduce((a, b) => a * b, 1) * service.rate;
+const area = values.length === 1 ? values[0] : values[0] * values[1];
+const subtotal = area * service.rate;
 document.getElementById(service.id + "Subtotal").innerText = `Subtotal: £${subtotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
 total += subtotal;
 });
@@ -203,27 +205,21 @@ total += subtotal;
 const totalEl = document.getElementById("total");
 
 if (total === 0) {
-totalEl.classList.remove('minimum');
 totalEl.innerText = "Enter measurements to see price";
 return;
 }
 
 const finalTotal = total < minimumFee ? minimumFee : total;
 
-if (total < minimumFee) {
-totalEl.classList.add('minimum');
-totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})} (minimum charge)`;
-} else {
-totalEl.classList.remove('minimum');
-totalEl.innerText = `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
-}
+totalEl.innerText = total < minimumFee
+? `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})} (Minimum charge applied)`
+: `Total: £${finalTotal.toLocaleString('en-GB', {minimumFractionDigits:2})}`;
 }
 
 function resetCalculator() {
 document.querySelectorAll('.calculator input').forEach(input => input.value = '');
 document.querySelectorAll('.subtotal').forEach(sub => sub.innerText = 'Subtotal: £0.00');
 const totalEl = document.getElementById("total");
-totalEl.classList.remove('minimum');
 totalEl.innerText = "Enter measurements to see price";
 }
 </script>
