--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -367,13 +367,16 @@ Yes, we are fully insured, giving customers peace of mind throughout the cleanin
 "latitude": 53.589,
 "longitude": -1.191
 },
-"areaServed": "Skellow",
+"areaServed": [
+{
+"@type": "Place",
+"name": "Skellow"
+}
+],
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
-"dayOfWeek": [
-"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
-],
+"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
 "opens": "00:00",
 "closes": "23:59"
 }
