--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -366,7 +366,7 @@ Yes, we are fully insured, giving customers peace of mind throughout the cleanin
 "latitude": 53.589,
 "longitude": -1.191
 },
-"areaServed": "Carcroft",
+"areaServed": "Skellow",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
