--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -363,14 +363,16 @@ Yes, we are fully insured, giving customers peace of mind throughout the cleanin
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.589,
-"longitude": -1.191
+"latitude": 53.583,
+"longitude": -1.186
 },
 "areaServed": "Skellow",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
-"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
 "opens": "00:00",
 "closes": "23:59"
 }
