--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -264,6 +264,8 @@ Yes, we are fully insured, giving customers peace of mind throughout the cleanin
 
 </footer>
 
+</script>
+
 <!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
 <script type="application/ld+json">
 {
