--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -4,9 +4,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title>Pressure Washing Carcroft - Driveway, Patio & Exterior Cleaning Services</title>
+<title>Pressure Washing Carcroft - Instant Online Quote Calculator</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-carcroft.html">
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/pressure-washing.html">
 <meta name="description" content="Professional pressure washing in Carcroft for driveways, patios, roofs and exteriors. Reliable local service delivering powerful cleaning and long-lasting results.">
 
 <style>
