--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -102,6 +102,12 @@ font-weight: bold;
 cursor: pointer;
 user-select: none;
 }
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
 </style>
  
 <!-- ✅ HEADER -->
