--- a/local/pressure-washing-adwick.html
+++ b/local/pressure-washing-adwick.html
@@ -1,1 +1,422 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Pressure Washing Skellow - Driveway, Patio & Exterior Cleaning Services</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-skellow.html">
+<meta name="description" content="Local pressure washing services in Skellow. Driveways, patios, decking, walls and exterior cleaning carried out safely with professional results.">
+
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get a Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Pressure Washing Services in Skellow</h1>
+<p>Outdoor surfaces around properties in Skellow are constantly exposed to changing weather conditions, vehicle traffic, and organic growth. Over time, this exposure causes dirt, algae, moss, lichen, and general staining to build up on driveways, patios, walls, and other exterior surfaces. This not only affects how a property looks but can also create slippery, unsafe areas and contribute to long-term surface deterioration if left untreated. Our pressure washing services in Skellow are designed to remove this build-up efficiently and safely, restoring surfaces to a cleaner, brighter condition.</p>
+<p>We use professional-grade pressure washing equipment combined with the correct cleaning techniques for each surface type. Before starting any work, surfaces are assessed to ensure the right pressure levels and methods are used, whether the area is block paving, concrete, tarmac, natural stone, or another material. This careful approach allows us to achieve deep, thorough cleaning results without causing damage. For homeowners and businesses in Skellow, pressure washing is a practical and cost-effective way to improve appearance, increase safety, and protect outdoor surfaces from premature wear.</p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Professional pressure washing in Skellow removing built-up dirt and algae from outdoor surfaces around a residential property"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Driveway Pressure Washing in Skellow</h2>
+<p>Driveways are one of the most heavily used areas of any property and are often the first feature people notice when arriving. In Skellow, driveways regularly accumulate oil stains, tyre marks, algae, moss, and ingrained dirt from daily use and exposure to the elements. This build-up can make the surface look tired and neglected while also increasing the risk of slips, especially during wet or icy conditions. Professional driveway pressure washing removes these contaminants from deep within the surface, restoring a cleaner and more even appearance.</p>
+<p>Our driveway cleaning service is suitable for block paving, concrete, tarmac, and natural stone surfaces. We carefully adjust pressure levels and techniques to suit the material, ensuring effective cleaning without loosening blocks or damaging the surface structure. In addition to improving visual appeal, regular driveway pressure washing helps protect against long-term issues such as staining, weed growth, and moisture retention. Many Skellow property owners choose driveway cleaning to enhance kerb appeal, maintain property value, and keep entrances safe and well presented throughout the year.</p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Driveway pressure washing in Skellow lifting oil stains, tyre marks, and moss from block paving using professional equipment"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patios and Decking</h2>
+<p>Patios and decking areas are designed to be enjoyed, but they are also highly vulnerable to dirt, algae, moss, and food or drink spills. In shaded or damp areas of Skellow, green growth can develop quickly, making surfaces slippery and unattractive. Pressure washing is an effective way to remove this build-up, restoring outdoor areas to a cleaner and safer condition. Our patio and decking cleaning service targets surface grime while preserving the integrity of the material underneath.</p>
+<p>We clean a wide range of surfaces, including concrete slabs, natural stone, porcelain paving, wooden decking, and composite boards. Each surface is treated differently, with pressure levels and cleaning techniques carefully selected to prevent damage such as surface etching or splintering. Cleaning patios and decking not only improves appearance but also extends the lifespan of the materials by preventing moisture retention and surface breakdown. For homeowners in Skellow, pressure washing is a practical solution for refreshing garden spaces and preparing outdoor areas for regular use, entertaining, or seasonal enjoyment.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="Patio and decking pressure washing in Skellow restoring a slippery outdoor seating area to a clean and safe finish"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Exterior Wall Pressure Cleaning in Skellow</h2>
+<p>Exterior walls are constantly exposed to pollution, weathering, and organic growth, all of which can leave properties looking dull and uncared for over time. In Skellow, brickwork, render, stone, and cladding often develop algae staining, moss patches, and traffic-related grime that standard cleaning methods cannot remove effectively. Pressure cleaning is a proven solution for lifting these contaminants and restoring walls to a fresher, cleaner appearance.</p>
+<p>Our exterior wall cleaning service uses professional equipment and controlled pressure to safely clean different wall surfaces without causing damage. Before work begins, we assess the condition and material of the walls to ensure the correct approach is used. Cleaning exterior walls not only improves visual appeal but also helps protect the structure by removing growth that traps moisture and contributes to long-term deterioration. Regular wall cleaning can reduce maintenance costs, prevent permanent staining, and extend the life of exterior finishes. For both residential and commercial properties in Skellow, clean walls create a stronger first impression and demonstrate that a property is well maintained.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Exterior wall pressure cleaning in Skellow removing traffic pollution and algae from brickwork and rendered surfaces"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Complete Exterior Pressure Washing Services in Skellow</h2>
+<p>Pressure washing is one of the most effective ways to maintain outdoor areas and prevent long-term surface damage. Over time, dirt, algae, moss, and general grime become embedded into exterior surfaces, making them harder to clean with basic methods. Our pressure washing services in Skellow are designed to remove this build-up thoroughly, improving appearance while helping to protect surfaces from moisture retention, staining, and deterioration.</p>
+<P>We provide pressure washing for a wide range of residential and commercial surfaces, using professional equipment and surface-appropriate techniques. Each area is assessed individually to ensure the correct pressure and cleaning method is applied, delivering consistent results without unnecessary wear. Regular pressure washing helps reduce the risk of slippery surfaces, improves hygiene, and keeps properties looking well maintained throughout the year. Whether you need a single area cleaned or a full exterior refresh, our service offers a reliable and cost-effective solution for properties across Skellow.</P>
+<ul style="text-align: left;">
+<li>Driveways and parking areas</li>
+<li>Patios and paved seating areas</li>
+<li>Decking and steps</li>
+<li>Paths and walkways</li>
+<li>Brick, stone and rendered walls</li>
+<li>Fences, gates and garden walls</li>
+<li>Garage Doors and cladding</li>
+<li>Gutters, fascias and soffits</li>
+<li>Conservatory roofs</li>
+<li>Commercial yards, car parks, and access areas</li>
+</ul>
+<img src="/images/pressure-washing-algae.webp"
+alt="Complete pressure washing service in Skellow covering driveways, patios, walls, and exterior surfaces for homes and businesses"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ FAQ SECTION -->
+<section style="max-width:900px; margin:40px auto; padding:0 15px;">
+
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions About Pressure Washing in Skellow</h2>
+
+<div>
+<p><strong>What affects the cost of pressure washing?</strong><br>
+Pricing depends on factors such as surface size, material type, and the level of dirt or staining present. We provide free quotes so you know the full cost before work begins.</p>
+
+<p><strong>Is pressure washing suitable for all surfaces?</strong><br>
+Yes, when carried out correctly. We adjust pressure levels and cleaning methods to suit each surface, ensuring safe and effective results.</p>
+
+<p><strong>Do I need to be at home during the cleaning?</strong><br>
+Not necessarily. As long as we have access to the areas being cleaned and a water supply, work can usually be completed without you being present</p>
+
+<p><strong>How often should exterior surfaces be cleaned?</strong><br>
+Most homes benefit from pressure washing once per year, although shaded or high-traffic areas may require more frequent cleaning.</p>
+
+<p><strong>Can you deal with oil stains and heavy discolouration?</strong><br>
+Many stubborn stains can be significantly reduced or fully removed using specialist treatments alongside pressure washing.</p>
+
+<p><strong>Is pressure washing environmentally friendly?</strong><br>
+We focus on water-efficient cleaning and can use eco-friendly products where required.</p>
+
+<p><strong>How long does it take for surfaces to dry?</strong><br>
+Most areas are safe to walk on within one to two hours, depending on weather conditions.</p>
+
+<p><strong>Do you offer services for businesses as well as homes?</strong><br>
+Yes, we clean both residential and commercial properties, including shops, offices, and industrial premises.</p>
+
+<p><strong>Are you fully insured?</strong><br>
+Yes, we are fully insured, giving customers peace of mind throughout the cleaning process.</p>
+
+</section>
+
+
+<!-- Close -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Trusted Pressure Washing Services in Skellow</h2>
+<p>Professional pressure washing is a simple way to improve safety, appearance, and long-term surface condition. From driveways and patios to walls and decking, our Skellow pressure washing service delivers reliable results using the correct methods for each surface. We work with homeowners and businesses alike, providing clear pricing and quality workmanship. Contact us today for a free quote and restore your exterior surfaces with confidence.</p>
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+
+</script>
+
+<!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "What affects the cost of pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Pricing depends on factors such as surface size, material type, and the level of dirt or staining present. We provide free quotes so you know the full cost before work begins."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing suitable for all surfaces?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, when carried out correctly. We adjust pressure levels and cleaning methods to suit each surface, ensuring safe and effective results."
+}
+},
+{
+"@type": "Question",
+"name": "Do I need to be at home during the cleaning?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Not necessarily. As long as we have access to the areas being cleaned and a water supply, work can usually be completed without you being present."
+}
+},
+{
+"@type": "Question",
+"name": "How often should exterior surfaces be cleaned?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most homes benefit from pressure washing once per year, although shaded or high-traffic areas may require more frequent cleaning."
+}
+},
+{
+"@type": "Question",
+"name": "Can you deal with oil stains and heavy discolouration?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Many stubborn stains can be significantly reduced or fully removed using specialist treatments alongside pressure washing."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing environmentally friendly?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We focus on water-efficient cleaning and can use eco-friendly products where required."
+}
+},
+{
+"@type": "Question",
+"name": "How long does it take for surfaces to dry?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most areas are safe to walk on within one to two hours, depending on weather conditions."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer services for businesses as well as homes?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we clean both residential and commercial properties, including shops, offices, and industrial premises."
+}
+},
+{
+"@type": "Question",
+"name": "Are you fully insured?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we are fully insured, giving customers peace of mind throughout the cleaning process."
+}
+}
+]
+}
+</script>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-skellow.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.58741,
+"longitude": -1.20558
+},
+"areaServed": "Skellow",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
